<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Activity.CreateProfileActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/create_a_profile"
            android:textColor="@color/blackBlue"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/roboto_regular"
            android:lineHeight="20dp"
            android:text="@string/header_text_create_profile"
            android:textColor="#B0B3BD"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginEnd="5.5dp"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/first_name"
                    android:paddingVertical="10dp"
                    android:textColorHint="#CFCFCF" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:gravity="center"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="5.5dp"
                    android:background="@drawable/custom_input"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/last_name"
                    android:paddingVertical="10dp"
                    android:textColorHint="#CFCFCF" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingVertical="10dp"
                android:textColorHint="#CFCFCF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/address"
                android:paddingVertical="10dp"
                android:textColorHint="#CFCFCF" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/createBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:elevation="12dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/create"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/by_creating_you_agree_to_the_terms_of_services_privacy_policy"
            android:textAlignment="center"
            android:textColor="@color/blackBlue"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>