<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/add_user"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textColor="@color/blackBlue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/user_name"
        android:textColor="@color/blackBlue" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtIDNumberUserManagement"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_phonenumber"
            android:paddingVertical="10dp"
            android:textColorHint="#CFCFCF" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/password"
        android:textColor="@color/blackBlue" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        app:boxBackgroundMode="none"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassUserManagement"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="10dp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:paddingVertical="10dp"
            android:textColorHint="#CFCFCF" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancelUserManagement"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:backgroundTint="#DDC1C1C1"
            android:elevation="12dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubMitUserManagement"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:elevation="12dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>