<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/create_an_account"
            android:textColor="@color/blackBlue"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvWelcomeBack"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/header_text_signin"
            android:textColor="#B0B3BD"
            android:textSize="14sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeaderText"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_inter"
                android:hint="@string/enter_phonenumber"
                android:inputType="number"
                android:paddingVertical="10dp"
                android:textColorHint="#CFCFCF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilPhoneNumber"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/custom_edittext_input"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_inter"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:textColorHint="#CFCFCF" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilPassword"
            android:gravity="center"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:passwordToggleDrawable="@drawable/custom_edittext_input"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_input"
                android:drawablePadding="10dp"
                android:fontFamily="@font/font_inter"
                android:hint="@string/enter_confirm_password"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:textColorHint="#CFCFCF" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continueBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/tilConfirmPassword"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_button"
            android:elevation="12dp"
            android:fontFamily="@font/font_inter"
            android:text="@string/continue_"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/continueBtn"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/footerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_inter"
                android:text="@string/already_have_an_account"
                android:textColor="@color/blackBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:elevation="12dp"
                android:fontFamily="@font/font_inter"
                android:text="@string/sign_in"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>