<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pic"
            android:layout_width="123dp"
            android:layout_height="96dp"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/titleTxtInCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/title"
            android:fontFamily="@font/roboto_bold"
            android:textStyle="bold"
            android:textColor="@color/blackBlue"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/pic"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceItemTxtInCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"
            android:textColor="#858282"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/titleTxtInCart"
            app:layout_constraintTop_toBottomOf="@+id/titleTxtInCart" />

        <TextView
            android:id="@+id/totalPriceTxtInCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/total_price"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="#E6864E"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pic">

            <TextView
                android:id="@+id/minusBtnInCart"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="#F7F7F7"
                android:background="@drawable/editext_background"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="#5D5D5D"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/numTxtInCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/number"
                android:fontFamily="@font/roboto_medium"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/blackBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/minusBtnInCart"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/plusBtnInCart"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/yellow"
                android:background="@drawable/editext_background"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/numTxtInCart"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>