<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:backgroundTint="#00FFFFFF"
    android:layout_marginHorizontal="5dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#DDF2F2F2"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DDF8F8F8"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/this_account_will_be_permanently_deleted_from_this_application"
                android:textAlignment="center"
                android:textColor="#DD626161"
                android:textSize="12sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="#E6C5C5C5" />

            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/white"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background"
        android:backgroundTint="@android:color/white"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:text="@string/cancel"
        android:textColor="#DD0326D7"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
